"new Double()" deprecated