@@ -421,9 +421,8 @@ public class SeriesSet implements ISeriesSet {
             if (i > ySeries.length) {
                 break;
             }
-            stackSeries[i] = new BigDecimal(new Double(stackSeries[i])
-                    .toString()).add(
-                    new BigDecimal(new Double(ySeries[i]).toString()))
+            stackSeries[i] = new BigDecimal(Double.valueOf(stackSeries[i]).toString()).add(
+                    new BigDecimal(Double.valueOf(ySeries[i]).toString()))
                     .doubleValue();
         }
         double[] copiedStackSeries = new double[stackSeries.length];
